--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -13,6 +13,9 @@ jobs:
       with:
         python-version: 3.8
 
+    - name: Check out the repository to the runner
+        uses: actions/checkout@v4
+
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
