--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Check out the repository to the runner
-      uses: actions/checkout@v4
+      uses: actions/checkout
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
